feat: Query statement collection
